--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 			<div class="ryu-throwing"></div>
 			<div class="ryu-cool"></div>
 		</div>
-		<div class="hadouken"></div>
+	<div class="text">
+		<p>Click on Ryu and he will throw a hadouken.</p>
+		<p>Press and hold down "X" and he will strike a pose!</p>
+	</div>	
 	<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
 	</div>
+	<div class="hadouken"></div>
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
