--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 			<div class="ryu-cool"></div>
 		</div>
 	<div class="text">
-		<p>Click on Ryu and he will throw a hadouken.</p>
-		<p>Press and hold down "X" and he will strike a pose!</p>
+			<p>Click on Ryu and he will throw a hadouken</p>
+			<p>Press and hold down "X" and he will strike a pose!</p>
 	</div>	
 	<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
-	</div>
-	<div class="hadouken"></div>
+		</div>
+		<div class="hadouken"></div>
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
